[tool.poetry]
name = "hydra-api"
version = "1.0.1"
description = "Official client for Siftrics' Hydra API, which is a text recognition documents-to-database service"
license = "Apache Version 2.0"
authors = ["Siftrics Founder <siftrics@siftrics.com>"]
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/siftrics/hydra-python"
homepage = "https://siftrics.com/"
keywords = ['hydra', 'api', 'text', 'recognition', 'ocr', 'computer', 'vision', 'siftrics', 'document', 'database']

[tool.poetry.dependencies]
python = "=2.7.* || >=3.5"  # Compatible python versions must be declared here
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
